Cite author and year

--- a/Procedimiento/test.tex
+++ b/Procedimiento/test.tex
@@ -1,4 +1,4 @@
-Para garantizar el correcto funcionamiento de cada uno de los componentes se diseñan una serie de test para comprobar el comportamiento. Para esto se usará una librería llamada Jest \cite{jest} , para instalarla se debe ejecutar el siguiente comando.
+Para garantizar el correcto funcionamiento de cada uno de los componentes se diseñan una serie de test para comprobar el comportamiento. Para esto se usará una librería llamada Jest \cite{jest} (Getting Started · Jest), para instalarla se debe ejecutar el siguiente comando.
 \newline
 \begin{figure}[H]
     \includegraphics[width=1\textwidth]{./Imagenes/8.39t.png}
