--- a/Resultados/Resultados.tex
+++ b/Resultados/Resultados.tex
@@ -1,7 +1,7 @@
 Con el desarrollo de la biblioteca ya es posible hacer la implementación de un proyecto el cual ya usa React.
 A continuación se ejemplifica el uso de la biblioteca paso a paso.
 
-Existe una herramienta que nos permite crear el esqueleto de una Web basada en React. \cite{CRA} esta es desarrollada y mantenida por Facebook, de la cual partiremos para crear una Web en la que probaremos la biblioteca.
+Existe una herramienta que nos permite crear el esqueleto de una Web basada en React. \cite{CRA}  ( Getting Started | Create React App) esta es desarrollada y mantenida por Facebook, de la cual partiremos para crear una Web en la que probaremos la biblioteca.
 
 Instalaremos la herramienta llamada Create React App con el siguiente comando.
 \newline
@@ -116,7 +116,7 @@ También se tiene el resultado después de agregar algunos usuarios.
     \caption[Resultado final al agregar usuarios]{Resultado final al agregar usuarios}
     \end{figure}
 \newline
-Los datos que se agregaron en la tabla, solo están almacenados en la memoria volátil del navegador, ya que esta biblioteca no cubre el hacer la petición HTTP. Pero la biblioteca es capaz de usarse con cualquier otra biblioteca que se encargue de hacer las peticiones por ejemplo AXIOS \cite{axios}.
+Los datos que se agregaron en la tabla, solo están almacenados en la memoria volátil del navegador, ya que esta biblioteca no cubre el hacer la petición HTTP. Pero la biblioteca es capaz de usarse con cualquier otra biblioteca que se encargue de hacer las peticiones por ejemplo AXIOS \cite{axios} (Cruz, R. 2019, November 1).
 
 En seguida se muestra otro ejemplo que figura un restaurante en el cual se muestran los platillos que se venden, con la posibilidad de filtrarlos si son bebidas o tragos.
 
