--- a/Introduccion/introduccion.tex
+++ b/Introduccion/introduccion.tex
@@ -6,7 +6,7 @@ Durante el presente documento se describe el proceso para desarrollar una biblio
 Se cubrirá la creación del ambiente requerido, instalación de paquetes, creación de ficheros y configuración de los mismos. 
 También se describira el desarrollo de cada uno de los componentes que se planea tener, se mostrará parte del código fuente que hace que estos funcionen correctamente, y los requisitos necesarios para que trabajen de manera adecuada. 
 Se dará una pequeña introducción al marco de trabajo React, ya que la presente biblioteca trabaja en conjunto con el.
-En el desarrollo de la biblioteca se implementara una guía de estilos de código para que el código sea un estándar, esto se logra usando la guía de estilos propuesta por Airbnb \cite{airbnb}que es una de las más usadas ya que actualmente obtendremos como resultado final un código fuente consistente en todo el desarrollo del proyecto, también nos ayuda a tener un código mucho más legible y en la medida de lo posible eficiente, aunque en algunos casos nos vemos restringidos al tener un estilo de programación que difiere , así cualquier persona interesada podrá colaborar para aumentar las funcionalidades una vez una primera versión aquí desarrollada esté lista.
+En el desarrollo de la biblioteca se implementara una guía de estilos de código para que el código sea un estándar, esto se logra usando la guía de estilos propuesta por Airbnb \cite{airbnb} (Agrawal, K. 2019, May 4) que es una de las más usadas ya que actualmente obtendremos como resultado final un código fuente consistente en todo el desarrollo del proyecto, también nos ayuda a tener un código mucho más legible y en la medida de lo posible eficiente, aunque en algunos casos nos vemos restringidos al tener un estilo de programación que difiere , así cualquier persona interesada podrá colaborar para aumentar las funcionalidades una vez una primera versión aquí desarrollada esté lista.
 Al terminar el desarrollo se tomará el tema de los test que trata de la manera en que se comprueba el correcto funcionamiento de lo aquí hecho.
 Finalmente se muestra la manera de usar los componentes aquí desarrollados, la manera de instalar la biblioteca y la correcta manera de implementarla.
 
