--- a/MarcoTeorico/marcoTeorico.tex
+++ b/MarcoTeorico/marcoTeorico.tex
@@ -1,8 +1,8 @@
     \begin{itemize}
     
-    	\item \textbf{biblioteca Front-end:} Una biblioteca Front-end \cite{frontEnd2}es una herramienta que es agregada a nuestros proyectos, en este caso Web, el cual incorpora elementos que otras personas o equipos ya desarrollaron, sumando funcionalidad a nuestra Web, reduce el mantenimiento y el tiempo de desarrollo, algunas características que existen actualmente y pueden agregarse van desde gráficas, animaciones, mapas etc. 
+    	\item \textbf{biblioteca Front-end:} Una biblioteca Front-end \cite{frontEnd2} (Ruiz Inoue, K. 2020, 20 agosto) es una herramienta que es agregada a nuestros proyectos, en este caso Web, el cual incorpora elementos que otras personas o equipos ya desarrollaron, sumando funcionalidad a nuestra Web, reduce el mantenimiento y el tiempo de desarrollo, algunas características que existen actualmente y pueden agregarse van desde gráficas, animaciones, mapas etc. 
       
-       \item \textbf{NPM :} NPM \cite{npm} es un gestor de paquetes que nos permite agregar dependencias a cualquier proyecto basado en Javascript, esto es posible con un cliente de líneas de comandos que es útil para poner o quitar los paquetes que deseamos. La configuración consta de un archivo en el cual contiene una lista de las dependencias que se quieren instalar en nuestro proyecto. Actualmente existen miles de paquetes que pueden ser descargados de manera gratuita y de igual manera permite colaborar. 
+       \item \textbf{NPM :} NPM \cite{npm} (What is npm. 2020) es un gestor de paquetes que nos permite agregar dependencias a cualquier proyecto basado en Javascript, esto es posible con un cliente de líneas de comandos que es útil para poner o quitar los paquetes que deseamos. La configuración consta de un archivo en el cual contiene una lista de las dependencias que se quieren instalar en nuestro proyecto. Actualmente existen miles de paquetes que pueden ser descargados de manera gratuita y de igual manera permite colaborar. 
        
        \item \textbf{ React :} React \cite{react} es una biblioteca de Javascript para el desarrollo de interfaces de usuario (Front-end), famosa por la posibilidad de hacer fácilmente Webs de usa sola página. React fue desarrollada por Facebook y con el paso del tiempo, conocidas empresas han empezado a implementarlo en sus proyectos. 
     React nos permite desarrollar de una forma más ordenada y con el menos código necesario. 
@@ -44,13 +44,13 @@ La forma de hacer el llamado a un componente es la siguiente.
         \caption[Llamado a componente]{Llamado a componente}
        \end{figure}
        \newline
-       \item \textbf{HTML  :}   HTML \cite{html} es un lenguaje con un conjunto de etiquetas que permite definir el contenido con el que podemos interactuar dentro de una página Web. 
+       \item \textbf{HTML  :}   HTML \cite{html} (Danny Goodman. 1998) es un lenguaje con un conjunto de etiquetas que permite definir el contenido con el que podemos interactuar dentro de una página Web. 
        
-       \item \textbf{ SASS :} SASS \cite{scss} es un preprocesador de CSS, el cual nos ayuda a agregar características que no tiene CSS puro y que son propias de los lenguajes de programación como variables, funciones, herencia entre otros. Nos permite dedicar menos tiempo para mantener y crear el CSS y agrega la posibilidad de tener una organización modular. 
+       \item \textbf{ SASS :} SASS \cite{scss} (Coyier, C. 2013) es un preprocesador de CSS, el cual nos ayuda a agregar características que no tiene CSS puro y que son propias de los lenguajes de programación como variables, funciones, herencia entre otros. Nos permite dedicar menos tiempo para mantener y crear el CSS y agrega la posibilidad de tener una organización modular. 
        
        \item \textbf{ Webpack :} Hace algunos años Javascript iniciaba como un lenguaje que nos permitía agregar interacción a nuestras páginas Web, que anteriormente eran simplemente contenido estático.  Javascript nos permitía recuperar los datos que eran introducidos en formularios, podíamos mostrar ventanas emergentes o incluso agregar animaciones. Para agregar Javascript en nuestros archivos de HTML, se debía agregar la etiqueta <script>, donde se indicaba la ruta donde estaba almacenado nuestro archivo .js de Javascript.  
     Años más tarde se agregó soporte al lenguaje Javascript, para permitir hacer peticiones asíncronas a nuestros servidores, esto hizo que las empresas empezaran a ver como viable el desarrollo Web, que previamente estaba enfocado en el desarrollo de escritorio, también hizo que los archivos .js empezaran a crecer en cantidad de líneas en nuestros proyectos, y se miraba reflejado en nuestros archivos .HTML los cuales empezaron a tener múltiples etiquetas <script>. Lo que significaba múltiples peticiones para obtener los archivos del servidor, esto agregaba una capa de complejidad, debido a la inclusión de múltiples archivos .js embebidos en un .HTML y al agregarlos se debe tener en cuenta el orden en que se listan, porque es posible que tengan dependencias entre ellos. Actualmente es posible comprimir los múltiples archivos .js para que sean menos peticiones al servidor (CDN).  Cuando un proyecto con Javascript crecía aumentaba el número de módulos que se agregan, pero no existía la forma de gestionarlos. Un problema que tenía Javascript es que los navegadores no soportan un sistema nativo de módulos por eso se agregaron Require.js y Common JS. 
-    En base a esto nació Webpack \cite{webPack} que permite usar NPM como gestor de dependencias y soporta el sistema de módulos Common JS.
+    En base a esto nació Webpack \cite{webPack} (Gallegos, G. 2017, 20 octubre) que permite usar NPM como gestor de dependencias y soporta el sistema de módulos Common JS.
     Webpack permite modular nuestro código, para esto genera un grafo dado un punto de entrada, el punto de entrada es el nodo inicial de nuestro grafo, el grafo es generado con las inclusiones de elementos encontrados en los archivos, como son imágenes, archivos de CSS etc. Esto genera un archivo final en el que estará el empaquetado de nuestros archivos. 
     Webpack nos permite especificar cargadores para distintos tipos de archivos como imágenes, SCSS, CSS, HTML. JSX, etc. ya que nativamente solo admite archivos Javascript. 
     La configuración es dada por un archivo que se coloca en la raíz del proyecto.
